# crok

./: CHANGELOG.md  Cargo.toml  README.md  default.nix
.github/workflows/: mdbook.yml
crates/crok/: Cargo.toml  README.md
crates/crok-integration/: Cargo.toml
crates/crok-lib/: Cargo.toml
crates/crok-mdbook/: Cargo.toml
crates/crok-mdbook/src/: main.rs
crates/procstream/: Cargo.toml  PLAN.md  README.md
crates/procstream/src/: capture.rs  driver.rs  job.rs  lib.rs  poller.rs  transform.rs
doc/: book.toml
doc/src/: advanced-features.md  basic-usage.md  control-structures.md  environment.md  getting-started.md  installation.md  overview.md  pattern-matching.md  quoting.md  reference.md
examples/: background-server.cli
tests/self-test/: bare_file.crok  bare_file.out
tests/v0/: all_constructs.cli  ansi.cli  any.cli  background.cli  background.out  background_early_exit.cli  basic_parse.cli  capture.cli  closed_stream_timeout.cli  defer.cli  defer_multiple.cli  empty.cli  empty2.cli  empty3.cli  errors.cli  escaping.cli  exit.cli  file_system.cli  for.cli  if.cli  if_pattern.cli  ignore.cli  include.cli  pwd.cli  (+10 more)
tests/v0-fail/: any.cli  backandforeground.cli  background.cli  choice.cli  complex_pattern_mismatch.cli  exit_fail.cli  exit_mismatch.cli  expect_mismatch.cli  foreground.cli  ignore.cli  invalid_header.cli  invalid_header.out  long_mismatch.cli  no_match.cli  not.cli  optional.cli  out_of_order.cli  reject.cli  repeat.cli  sequence.cli  timeout.cli  unordered.cli  unordered_complex_1.cli  unordered_complex_2.cli  unordered_complex_3.cli
(+19 files in other folders)
